<resources>
    <string translatable="false" name="app_name">PSIGAME+</string>
    <string name="app_folder">PSIGAME_PLUS</string>
    <string name="certificate">certificates</string>
    <string translatable="false" name="version">Versión: 1.0.1</string>
    <string translatable="false" name="exit">Pulse de nuevo para salir</string>
    <string translatable="false" name="title_home">Incio</string>
    <string translatable="false" name="title_statistics">Estadísticas</string>
    <string translatable="false" name="title_configuration">Configuración</string>
    <string translatable="false" name="title_about">Acerca de ...</string>
    <string translatable="false" name="title_certificate">Certificado</string>
    <string translatable="false" name="title_tab_course_general_psychology">General</string>
    <string translatable="false" name="title_tab_course_medical_psychology">Médica</string>
    <string translatable="false" name="title_level_rookie">Novato</string>
    <string translatable="false" name="title_level_competent">Competente</string>
    <string translatable="false" name="title_level_professional">Profesional</string>
    <string translatable="false" name="text_banner_one">Demuestra tu nivel</string>
    <string translatable="false" name="text_banner_two">en</string>
    <string translatable="false" name="text_banner_three">Psicología</string>
    <string translatable="false" name="not_exist_questions">No se puede acceder a este nivel en esta versión.</string>
    <string translatable="false" name="descriptions_part_one">PSIGAME+ es una aplicación diseñada para
        dispositivos móviles y tablets con sistema operativo Android.\n\nEl equipo de especialistas responsables de la
        elaboración y adaptación de contenidos de este recurso educativo digital
        estuvo a cargo de:</string>
    <string name="descriptions_part_two">El equipo de desarrollo de la aplicación estuvo conformado por:</string>
    <string name="descriptions_part_three">Pertenecientes a la empresa INNOVAT SRL. La misma brinda los siguientes
        servicios:\n
        \tDiseñar, programar e implementar aplicaciones informáticas\n
        \tEdición de programas informáticos\n
        \tPrestar servicios de asistencia técnica\n
        \tBrindar servicios de montaje, instalación, mantenimiento y reparación de equipos de cómputo\n
        \tDiseño, soporte técnico y actualización de portales web\n
        \tComercializar ordenadores, equipos periféricos, programas informáticos y equipos de telecomunicaciones
        permitidos por la ley y que no provengan de la red del comercio minorista\n
        \tVenta al por menor por correo y por internet, excepto los productos provenientes de la red del comercio
        minorista y los prohibidos por la ley</string>
    <string name="text_mark_water_1" translatable="false">Este producto ha sido</string>
    <string name="text_mark_water_2" translatable="false">Desarrollado por :</string>
    <string name="text_mark_water_3" translatable="false">Auspiciado por :</string>
    <string name="text_name_doctor" translatable="false">M. Sc. Cristóbal Eutasio Mesa Simpson</string>
    <string name="text_phone_doctor" translatable="false">+53 52636877</string>
    <string name="text_phone_doctor_2" translatable="false">+53 452443070</string>
    <string name="text_email_doctor" translatable="false">cristobalmesa.mtz@infomed.sld.cu</string>
    <string name="curriculum_doctor" translatable="false">Máster en Educación Médica. Profesor Auxiliar e Investigador
        Agregado y Jefe Departamento de Tecnología Educativa de la
        Universidad de Ciencias Médicas de Matanzas</string>
    <string name="text_name_design" translatable="false">Javier Ramírez Chacón</string>
    <string name="text_phone_design" translatable="false">+53 50914394</string>
    <string name="text_email_design" translatable="false">javierrc93@nauta.cu</string>
    <string name="text_name_developer" translatable="false">Luis Andrés Valido Fajardo</string>
    <string name="text_phone_developer" translatable="false">+53 53694742</string>
    <string name="text_email_developer" translatable="false">luis.valido1989@gmail.com</string>
    <string name="text_facebook_ucmm" translatable="false"></string>
    <string name="text_email_ucmm" translatable="false">cristobalmesa.mtz@infomed.sld.cu</string>
    <string name="text_phone_ucmm" translatable="false">+53 45243070</string>
    <string name="text_facebook_innovat_srl" translatable="false">@Innovat_Srl</string>
    <string name="text_email_innovat_srl" translatable="false">innovat.mtz@gmail.com</string>
    <string name="text_phone_innovat_srl" translatable="false">+53 50914394</string>
    <string name="text_phone_innovat_srl_2" translatable="false">+53 50914325</string>
    <string name="value_empty_date" translatable="false">--/--/----</string>
    <string name="value_empty" translatable="false">----------</string>
    <string name="count_games" translatable="false">Cantidad de juegos:</string>
    <string name="first_game" translatable="false">Primer juego:</string>
    <string name="last_game" translatable="false">Último juego:</string>
    <string name="best_score" translatable="false">Mejor puntuación:</string>
    <string name="worst_score" translatable="false">Peor puntuación:</string>
    <string name="mean_score" translatable="false">Puntuación promedio:</string>
    <string name="games_before_accept" translatable="false">Intentos antes de vencer:</string>
    <string name="date_first_accept" translatable="false">Fecha del nivel superado:</string>
    <string name="text_begin_register" translatable="false">\tLa aplicación PSIGAME+ permite la generación de certificados que acreditan
    su nivel en Psicología General y Psicología Médica acorde a los niveles que usted puede alcanzar en el juego.\n\n\tPara
        la emisión de dichos certificados se hace necesario que usted llene un formulario de registro con algunos
        dados necesarios para la elaboración de los certificados. De igual forma las estadísticas del juego no comenzarán
    a funcionar hasta que no se lleve a cabo dicho registro.</string>
    <string name="button_begin_register" translatable="false">Iniciar registro</string>
    <string name="title_button_register" translatable="false">Registrar</string>
    <string name="title_name" translatable="false">Nombre:</string>
    <string name="title_surname" translatable="false">Apellidos:</string>
    <string name="title_ci" translatable="false">No. Carnet Identidad:</string>
    <string name="title_gruop" translatable="false">Grupo académico:</string>
    <string name="title_phone_number" translatable="false">Número de teléfono:</string>
    <string name="title_emi" translatable="false">IMEI:</string>
    <string name="error_ci"> El número de carnet de identidad no es correcto.</string>
    <string name="error_group"> Seleccione un grupo académico.</string>
    <string name="error_surname"> El campo apellido no puede estar vacío.</string>
    <string name="error_imei"> El valor del IMEI no es correcto.</string>
    <string name="error_name"> El campo nombre no puede estar vacío.</string>
    <string name="error_number_phone"> El valor del número de teléfono no es correcto.</string>
    <string name="formats">Formatos:</string>
    <string name="expired_certificate">Expirar un certificado a nombre de:</string>
    <string name="format_pdf">.pdf</string>
    <string name="format_png">.png</string>
    <string name="format_jpg">.jpg</string>
    <string name="error_not_select_format">Debe seleccionar al menos un formato para generar certificado.</string>
    <string name="title_button_generate_certificate">Generar certificado</string>
    <string name="not_player_active_for_certificate">No existe jugador registrado para generar certificado</string>
    <string name="version_android_not_support_certificate_pdf">Lo sentimos su versión de Android no soporta la
        generación de documento PDF.</string>
    <string name="title_reset_stadistics">Reiniciar estadísticas</string>
    <string name="title_reset_register">Reiniciar datos de registro</string>
    <string name="title_reset_confirmation">Advertencia !!!</string>
    <string name="title_reset_button">Reniciar</string>
    <string name="title_cancel_button">Cancelar</string>
    <string name="text_advert_reset_register">Está seguro que desea reniciar los datos del registro. Si
        renicia dichos datos se perderá su progreso en el juego y no podrá obtener el certificado que emite el
    juego una vez vencido los niveles.</string>
    <string name="title_button_check" translatable="false">Comprobar</string>
    <string name="text_format_time" translatable="false">00:00</string>
    <string name="text_number_questions" translatable="false">#</string>
    <string name="text_of_questions" translatable="false">de</string>
    <string name="text_questions" translatable="false">preguntas</string>
    <string name="text_number_live" translatable="false">##</string>
    <string name="title_button_true" translatable="false">Verdadero</string>
    <string name="title_button_false" translatable="false">Falso</string>
    <string name="title_text_introduction" translatable="false">A partir de la siguiente sentencia seleccione
        las respuestas correctas</string>
    <string name="title_text" translatable="false">INFORMACIÓN !!!</string>
    <string name="title_button_start_quizz" translatable="false">Comenzar</string>
    <string name="title_text_win" translatable="false">ENHORABUENA !!!</string>
    <string name="description_text_win" translatable="false"><i><b>Felicidades</b>, has logrado superar el
        cuestionario
        de este nivel y has desbloquedado el siguiente nivel del juego.</i></string>
    <string name="title_text_lose" translatable="false">QUE LASTIMA !!!</string>
    <string name="description_text_lose"
            translatable="false"><i>Esta vez no ha podido ser. Estudia un poco más y veras que los resultados serán
        mejores
        .</i></string>
    <string name="title_button_result_continue" translatable="false">Continuar</string>
    <string-array name="list_names_group_student">
        <item>Invitado</item>
        <item>M-Colón</item>
        <item>M-Jagüey</item>
        <item>M-Cárdenas</item>
        <item>M-30</item>
        <item>M-31</item>
        <item>M-32</item>
        <item>M-33</item>
        <item>M-34</item>
        <item>M-35</item>
        <item>M-36</item>
        <item>M-37</item>
        <item>M-38</item>
        <item>M-39</item>
    </string-array>
    <string name="psigame_give">PSIGAME+ otorga en el presente</string>
    <string name="expired">Ortogado</string>
    <string name="teacher" translatable="false">Profesor: M. Sc. Cristóbal Eutasio Mesa Simpson</string>
    <string name="certicate">certificado a:</string>
    <string name="motivo">por haber alcanzado el nivel de :</string>
    <string name="example_grade">Competente en Sicologia General</string>
    <string name="title_level_rookie_mode_general">Novato en Psicología General</string>
    <string name="title_level_competent_mode_general">Competente en Psicología General</string>
    <string name="title_level_professional_mode_general">Profesional en Psicología General</string>
    <string name="title_level_rookie_mode_medica">Novato en Psicología Médica</string>
    <string name="title_level_competent_mode_medica">Competente en Psicología Médica</string>
    <string name="title_level_professional_mode_medica">Profesional en Psicología Médica</string>
    <string name="locationdownloadDoc">El certificado ha sido salvado en: </string>
    <string name="title_activity_quizz">QuizzActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>