<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_statistics"
            android:icon="@drawable/ic_statistics_white_24dp"
            android:title="@string/title_statistics"/>

    <item
            android:id="@+id/navigation_certificate"
            android:icon="@drawable/ic_certificate_white_24dp"
            android:title="@string/title_certificate"/>

    <item
            android:id="@+id/navigation_configuration"
            android:icon="@drawable/ic_configuration_white_24dp"
            android:title="@string/title_configuration"/>

    <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_information_white_24dp"
            android:title="@string/title_about"/>

</menu>