<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <ScrollView
            android:id="@+id/SCROLLER_ID"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:fillViewport="true"
            android:scrollbars="vertical"
            android:gravity="center"
            android:layout_gravity="center">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1" />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:background="@drawable/border_round_8dip">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          style="@style/CustomTextPropertyFieldRegister"
                          android:text="@string/title_name"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="36dp"
                          android:id="@+id/edit_text_name"
                          android:textColor="@color/black"
                          android:background="@drawable/border_round_8dip"
                          android:maxLines="1"
                          android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                          android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          style="@style/CustomTextPropertyFieldRegister"
                          android:text="@string/title_surname"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="36dp"
                          android:id="@+id/edit_text_surname"
                          android:textColor="@color/black"
                          android:background="@drawable/border_round_8dip"
                          android:maxLines="1"
                          android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                          android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          style="@style/CustomTextPropertyFieldRegister"
                          android:text="@string/title_ci"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="36dp"
                          android:id="@+id/edit_text_ci"
                          android:textColor="@color/black"
                          android:background="@drawable/border_round_8dip"
                          android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                          android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                          android:maxLines="1"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          style="@style/CustomTextPropertyFieldRegister"
                          android:text="@string/title_gruop"/>
                <Spinner android:layout_width="match_parent"
                         android:layout_height="36dp"
                         android:id="@+id/spinner_gruop"
                         android:background="@drawable/border_round_8dip"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          style="@style/CustomTextPropertyFieldRegister"
                          android:text="@string/title_phone_number"
                          android:visibility="gone"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="36dp"
                          android:id="@+id/edit_text_phone_number"
                          android:editable="false"
                          android:textColor="@color/black"
                          android:background="@drawable/border_round_8dip"
                          android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                          android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                          android:maxLines="1"
                          android:visibility="gone"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          style="@style/CustomTextPropertyFieldRegister"
                          android:text="@string/title_emi"
                          android:visibility="gone"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="36dp"
                          android:id="@+id/edit_text_emi"
                          android:editable="false"
                          android:textColor="@color/black"
                          android:background="@drawable/border_round_8dip"
                          android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                          android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                          android:maxLines="1"
                          android:visibility="gone"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_register_certificate"
                    android:text="@string/title_button_register"
                    android:background="@drawable/button_standar"/>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>