<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <Space  android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:background="@drawable/border_round_8dip"
                      android:padding="10dp"
                      android:layout_margin="15dp">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/title_text_win"
                      android:id="@+id/text_view_title_result"
                      android:gravity="center"
                      style="@style/TitleInformationFragmentQuizz"/>
            <View   android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:background="#c0c0c0"/>
            <Space  android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/text_view_description_result"
                      android:layout_marginTop="15dp"
                      android:layout_marginBottom="15dp"
                      android:text="@string/text_begin_register"
                      android:textColor="@color/black"/>
            <Space  android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            <Button android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_button_result_continue"
                    android:id="@+id/button_continue_quizz"
                    android:layout_gravity="center"
                    android:background="@drawable/button_information"
                    android:textColor="@color/white"
                    android:fontFamily="@font/tt_interfaces_bold"/>
        </LinearLayout>
        <Space  android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>